@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.1248 2020/02/26 15:26:21 nia Exp $
+$NetBSD: CHANGES-2020,v 1.1249 2020/02/26 15:28:34 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -1782,3 +1782,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated graphics/p5-GraphicsMagick to 1.3.35 [nia 2020-02-26]
 	Removed geography/geolite2-country [wiz 2020-02-26]
 	Updated security/KeePass to 2.44 [nia 2020-02-26]
+	Removed geography/geolite2-city [wiz 2020-02-26]
